[project]
name = "dlt-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Rizzo S M de Albuquerque",email = "grizzo.albu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dlt[duckdb] (>=1.12.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
